<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/background_welcome_min"
              tools:context="com.fatcatmuscat.VMessenger.LoginActivity"
              android:gravity="bottom">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorDefault"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="22sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@integer/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="signInExistingUser"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:background="@color/white"
        android:textColor="@color/green"
        android:onClick="registerNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_register"
        android:textStyle="bold"/>

</LinearLayout>
