<resources>
    <string name="app_name">VMessenger</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">Invalid credentials</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">Invalid credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="toast_login_progress">Login in progress&#8230;</string>
    <string name="toast_login_unsuccessful_title">Oopsies!</string>
    <string name="toast_login_unsuccessful_message">Login attempt failed</string>

    <string name="sample_message">Hello!</string>
</resources>
