...
            android:imeOptions="actionUnspecified"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLines="1"
            android:gravity="center_horizontal"/>

        <ImageButton
            android:id="@+id/sendButton"
            android:padding="10dp"
            android:background="@drawable/circle_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/action_send"/>
...
