<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/background_login_min"
              tools:context="com.fatcatmuscat.VMessenger.RegisterActivity"
              android:gravity="top">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <AutoCompleteTextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:hint="@string/prompt_username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textIsSelectable="false"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:imeOptions="actionNext"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textIsSelectable="false"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/register_password"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/register_confirm_password"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:imeActionId="@integer/register_form_finished"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_sign_up_button"
            style="?android:textAppearanceMedium"
            android:background="@color/white"
            android:textColor="@color/green"
            android:onClick="signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            android:textStyle="bold"/>



</LinearLayout>